# calcslive-plug-4-freecad

./: .gitignore  CalcsLiveTools.py  CalcsLiveTools_Unicode_Broken.py  FC_CL_Bridge.FCMacro  InitGui.0.py  InitGui.py  README.md  __init__.py  calcslive-freecad-plug-server.py  package.xml  varset_data_extractor.py
calcsliveutils/: init_tools.py
commands/: SyncCommand.py  __init__.py
core/: ParameterExtractor.py  UnitMapper.py  __init__.py
macros/: QuantityTypesHelper.py
models/: Box-VarSet-Example-v1.FCStd  Box-VarSet-Example-v2.FCStd  Box-VarSet-Example.FCStd  Box-without-PQs-Setup.FCStd  Cylinder - qwen.FCStd  Cylinder-VarSet-Example.FCStd  Cylinder-VarSet-Example.v0.FCStd  Cylinder-v1.FCStd  Cylinder.FCStd  Initialize VarSet PQs-1.FCStd  Initialize VarSet PQs.FCStd  PartDesignDemo1.FCStd
utils/: BrowserLauncher.py  __init__.py
v0/: FC_CL_Bridge.FCMacro  InitGui.py
v0/calcsliveutils/: __init__.py
v0/commands/: ConnectCommand.py  DashboardCommand.py  StatusCommand.py  SyncCommand.py
v0/core/: CalcsLiveClient.py  ConfigManager.py  ModelUpdater.py  ParameterMapper.py  SyncEngine.py
v0/macros/: ExtractQuantityTypes.FCMacro  FcadQuantityTypes.py
v0/models/: Box-VarSet-Example.FCStd  Box-VarSet-Example.v0.FCStd  Box.FCStd  Cylinder.FCStd  Cylinder_calcslive_mapping.json  PartDesignDemo1.FCStd
v0/refs/: archtecture-1.excalidraw  archtecture-2.excalidraw
v0/ui/: __init__.py
v0/utils/: ErrorHandler.py
